Fixes logo heights and alignment

--- a/docroot/sites/all/themes/ilr_theme/scss/components/_sports-leadership.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/components/_sports-leadership.scss
@@ -24,6 +24,10 @@ body.sports-leadership {
     header {
       background: transparent;
 
+      .logo-wrapper {
+        margin: 0;
+      }
+
       .cornell-seal__link {
         top: -4rem;
       }
